# kin

./: .clang_complete  .gitignore  .vimrc  CMakeLists.txt  Makefile  README.md  README.pdc  TODO.md  api.go  error.go  factory.go  factory_test.go  git_backend.go  git_backend_test.go  idgenerator.go  idgenerator_test.go  kin_test.go  make.sh  mk  options.go  options_test.go  posix_backend.go  posix_backend_test.go  repository.go  singleclient.go  singleclient_test.go  version.go
cmake/: FindHiRedis.cmake  FindRADOS.cmake
coordination/: coordinator.go  singleclient.go
kin/: README.md  kin.go
metadb/: leveldb.go  memory.go  metadb.go  rados.go  rados_test.go
opts/: options.go
src/diversion/: diversion.go  error.go  options.go  repository.go
src/diversion/coordination/: coordinator.go
src/diversion/metadb/: memory.go  metadb.go  rados.go  rados_test.go
src/diversion/opts/: options.go
src/kin/: error.go  repository.go
src/kin/coordination/: singleclient.go
src/kin/metadb/: memory.go  metadb.go  rados.go  rados_test.go
src/kin/opts/: options_test.go
src/kin/version/: idgenerator_test.go  version.go
src/test/: CMakeLists.txt  repository_test.cpp
src/test/coordination/: backendcoordinator_test.cpp  mpicoordinator_test.cpp  singleclientcoordinator_test.cpp
src/test/gmock/gtest/include/gtest/internal/: gtest-internal.h
src/test/refdb/: memrefdb_test.cpp  redisrefdb_test.cpp
src/versos/: options.h  repository.cpp  repository.h  todo.cpp  utils.h  version.cpp  version.h  versosexception.h
src/versos/coordination/: backendcoordinator.cpp  backendcoordinator.h  coordinator.cpp  coordinator.h  mpicoordinator.cpp  mpicoordinator.h  singleclientcoordinator.cpp  singleclientcoordinator.h
src/versos/objdb/: memobjdb.cpp  memobjdb.h  objdb.h  radosobjdb.cpp  radosobjdb.h
src/versos/objectversioning/: memversionedobject.cpp  memversionedobject.h  radosversionedobject.cpp  radosversionedobject.h  versionedobject.cpp  versionedobject.h
src/versos/refdb/: memrefdb.cpp  memrefdb.h  radosrefdb.h  redisrefdb.cpp  redisrefdb.h  rediswrapper.cpp  rediswrapper.h  refdb.cpp  refdb.h
src/versos/util/: rediswrapper.cpp  rediswrapper.h  stringutils.h
version/: idgenerator.go  idgenerator_test.go
